# sao-guidance

./: .gitignore  AudacityHelper.py  Colab-Friendly-Sao.ipynb  README.md  TestWorkbook.ipynb  audio_helpers.py  example_audio_interactions.ipynb  latent_exploration.ipynb  load_latent.ipynb  patch_torchcodec_mac.sh  pyproject.toml  sao.ipynb  torchcrepe.ipynb  trial_guidance.ipynb
chord/: TestWorkbook.ipynb
melody/: Colab-Friendly-guidance.ipynb  audio_helpers.py  example_audio_interactions.ipynb  latent_exploration.ipynb  load_latent.ipynb  torchcrepe.ipynb  trial_guidance.ipynb
