[project]
name = "sao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aeiou>=0.0.21",
    "ipywidgets>=8,<9",
    "jupyter>=1.1.1",
    "notebook>=6.5,<7",
    "stable-audio-tools>=0.0.19",
    "torchcodec==0.8.0",
    "widgetsnbextension>=4.0.14",
]
