[project]
requires-python = "==3.10.*"
name = "sao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "aeiou>=0.0.21",
    "ipywidgets>=8,<9",
    "jupyter>=1.1.1",
    "mir-eval>=0.8.2",
    "notebook>7",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.3.4",
    "sounddevice>=0.5.3",
    "stable-audio-tools>=0.0.19",
    "torchcodec==0.8.0",
    "torchcrepe>=0.0.24",
    "widgetsnbextension>=4.0.14",
]

[tool.uv.sources]
# Uncomment if you have a local install of stable-audio-tools
# stable-audio-tools = { path = "stable-audio-tools", editable = true }
# torchcrepe = { path = "torchcrepe_package", editable = true }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128", marker = "sys_platform == 'windows'" },
]

[project.optional-dependencies]
cpu = [
  "torch>=2.8.0",
  "torchaudio",
  "torchvision"
]
cu128 = [
  "torch>=2.8.0",
  "torchaudio",
  "torchvision",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
